force-app/main/default/objects/Referencia_bancaria__c/Referencia_bancaria__c.object-meta.xml
<CustomObject>
    <label>Referência bancária</label>
    <nameField>
        <displayFormat>RB-{0000}</displayFormat>
        <label>Referência bancária</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referências bancárias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>