force-app/main/default/objects/Referencia_bancaria__c/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <label>Agência</label>
    <length>15</length>
    <type>Text</type>
</CustomField>