force-app/main/default/objects/Referencia_bancaria__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <inlineHelpText>Nome do banco</inlineHelpText>
    <label>Banco</label>
    <length>50</length>
    <type>Text</type>
</CustomField>