force-app/main/default/objects/Referencia_bancaria__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <label>Empresa</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referências bancárias</relationshipLabel>
    <relationshipName>Refereias_bancarias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>