force-app/main/default/objects/Referencia_bancaria__c/fields/Conta_bancaria__c.field-meta.xml
<CustomField>
    <fullName>Conta_bancaria__c</fullName>
    <label>Conta</label>
    <length>15</length>
    <type>Text</type>
</CustomField>