force-app/main/default/objects/Referencia_bancaria__c/fields/Contato__c.field-meta.xml
<CustomField>
    <fullName>Contato__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <value>001i00000085QYb</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referências bancárias</relationshipLabel>
    <relationshipName>Referencias_bancarias</relationshipName>
    <type>Lookup</type>
</CustomField>