force-app/main/default/objects/Referencia_bancaria__c/fields/Tele_conta__c.field-meta.xml
<CustomField>
    <fullName>Tele_conta__c</fullName>
    <formula>Conta__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone conta</label>
    <type>Text</type>
</CustomField>