force-app/main/default/objects/Referencia_bancaria__c/fields/Telefone_Contato__c.field-meta.xml
<CustomField>
    <fullName>Telefone_Contato__c</fullName>
    <formula>Contato__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefone Contato</label>
    <type>Text</type>
</CustomField>