force-app/main/default/objects/Referencia_bancaria__c/fields/Telefone_Gerente__c.field-meta.xml
<CustomField>
    <fullName>Telefone_Gerente__c</fullName>
    <label>Telefone Gerente</label>
    <length>25</length>
    <type>Text</type>
</CustomField>